# geekcommander

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.ps1  build.sh  test_app.ps1
src/: archive.rs  config.rs  core.rs  error.rs  main.rs  platform.rs  ui.rs  viewer.rs
test_files/: config.ini  document.txt
